--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>便携小空调</title>
+    <title>菜花牌空调（bilibili限定）</title>
     <!-- Fonts to support Material Design -->
     <link
       rel="stylesheet"
