--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
-    <!-- 谷歌广告测试 -->
+    <!-- Google Adsense is Best! -->
     <script
       data-ad-client="ca-pub-2245427233262012"
       async
